fix: make chat window visible

--- a/src/plugin.css
+++ b/src/plugin.css
@@ -1,3 +1,7 @@
+.video-js {
+  position: relative;
+}
+
 .vjs-has-chat-window .vjs-tech { outline: none; }
 
 .vjs-chat-window {
